<resources>
    <string name="app_name" translatable="false">SmartCanteen</string>
    <string name="main_trades">Available Trades</string>
    <string name="main_bar_meals">Bar Meals</string>
    <string name="main_orders">Your Orders</string>
    <string name="login" translatable="false">Login</string>
    <string name="email" translatable="false">Email</string>
    <string name="login_email" translatable="false">Email:</string>
    <string name="password" translatable="false">Password</string>
    <string name="login_password" translatable="false">Password:</string>
    <string name="main_search_meals">Search Meals</string>
    <string name="trade">Trade</string>
    <string name="id" translatable="false">Id</string>
    <string name="consumer_name">Consumer Name</string>
    <string name="state">State</string>
    <string name="orders">Orders</string>
    <string name="my_orders">My orders</string>
    <string name="quantity">Quantity</string>
    <string name="price">Price</string>
    <string name="my_trades">My trades</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="ingredients_change">Change of ingredients</string>
    <string name="exchange_payment">Exchange payment</string>
    <string name="payment_method">Payment method</string>
    <string name="total" translatable="false">Total</string>
    <string name="general">General</string>
    <string name="direct_trade">Direct trade</string>
    <string name="consumer_email">Consumer email</string>
    <string name="confirm">Confirm</string>
    <string name="profile">Profile</string>
    <string name="name">Name</string>
    <string name="preferred_canteen">Preferred canteen</string>
    <string name="institute">Institute</string>
    <string name="order">Order</string>
    <string name="take">Take?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="canteen">Canteen</string>
    <string name="pick_up_time">Pick-up time</string>
    <string name="cart">Cart</string>
    <string name="pay">Pay</string>
    <string name="favorites">Favorites</string>
    <string name="add_cart">Add to cart</string>
    <string name="show_password">Show Password</string>
    <string name="no_orders_placed">No orders placed</string>
    <string name="no_trades_placed">No trades placed</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="my_orders_lowercase">My Orders</string>
    <string name="my_trades_lowercase">My Trades</string>
    <string name="free">Free</string>
    <string name="ordernum">Order N</string>
    <string name="qty">qty</string>
    <string name="change_ingredient">Change Ingredient</string>
    <string name="ingredient_name">Ingredient name</string>
    <string name="ingredient_dosage">Ingredient Dosage</string>
    <string name="increment_limit">Increment limit</string>
    <string name="decrement_limit">Decrement limit</string>
    <string name="can_increment">Can increment?</string>
    <string name="can_decrement">Can decrement?</string>
    <string name="can_remove">Can Remove?</string>
    <string name="description">Description</string>
    <string name="meal_changes">Changes</string>
    <string name="favorite">Favorite</string>
    <string name="time">Time</string>
    <string name="title">Title</string>
    <string name="notification">Notification</string>
    <string name="Loading...">Loading...</string>
    <string name="current_state">Current State</string>
    <string name="deliver">Deliver</string>
    <string name="email_error">The email has to be filled in</string>
    <string name="is_free">Is Free?</string>
    <string name="Menu">Menu</string>
    <string name="see_menu">View Menu</string>
    <string name="no_changes_available">No changes available</string>
    <string name="wish_remove_meal_ask">Do you really want to remove this meal?</string>
    <string name="meal_being_used">Cant delete a meal that is being used!!</string>
    <string name="see_orders">See Orders</string>
    <string name="total_requests">Total Orders</string>
    <string name="delivered_orders">Delivered Orders</string>
    <string name="undelivered_orders">Undelivered Orders</string>
    <string name="trades_made">Trades Done</string>
    <string name="description_2">Description:</string>
    <string name="changes_2">Changes:</string>
    <string name="type">Type:</string>
    <string name="only_increase">Only Increase</string>
    <string name="field_error">This field must be filled in</string>
    <string name="is_remove_only">Is Remove only?</string>
    <string name="default_value">Default Value</string>
    <string name="cantakeaway">CanTakeAway</string>
    <string name="warning">It is mandatory to fill in all fields</string>
    <string name="trades">Trades</string>
    <string name="no_orders">Error! No orders could be obtained</string>
    <string name="error">Error! Try again</string>
    <string name="no_trades">Error! No trades could be obtained</string>
    <string name="canceled_operation">Canceled operation</string>
    <string name="sucess_methods">Successfully obtained payment methods</string>
    <string name="error_methods">Error! Unable to obtain the payment method</string>
    <string name="error_trade">Trade not possible</string>
    <string name="success_trade">Successful trade</string>
    <string name="empty_email">Error! Empty email</string>
    <string name="empty_password">Error! Empty password</string>
    <string name="error_role">Erro! This role does not exist</string>
    <string name="invalid_email">Error! Invalid email</string>
    <string name="invalid_password">Invalid password</string>
    <string name="error_login">Error! Unable to login, please try again</string>
    <string name="success_general_trade">General exchange carried out successfully!</string>
    <string name="error_general_trade">Error! Failed General Trade</string>
    <string name="success_direct_trade">Direct trade carried out successfully</string>
    <string name="error_direct_trade">Error!  Failed Direct Trade</string>
    <string name="succes_change">" Meal change successfully removed "</string>
    <string name="error_change">Error! Unable to remove the meal change.</string>
    <string name="only_remove">Only Remove</string>
    <string name="increment_decrement">Increment and Decrement</string>
    <string name="only_increment">Only increment</string>
    <string name="only_decrement">Only decrement</string>
    <string name="add_fav_meal">Meal added to favorites</string>
    <string name="error_add_fav_meal">Error! Could not add the meal to favorites</string>
    <string name="remove_fav_meal">Meal removed from favorites!</string>
    <string name="error_remove_fav_meal">Error! Unable to remove meal from favorites</string>
    <string name="success_add_meal_change">Alteração adicionada à refeição com sucesso</string>
    <string name="error_add_meal_change">Erro! Não foi possível adicionar a alterção</string>
    <string name="error_allowed_changes">Error! Could not get the allowed changes.</string>
    <string name="success_allowed_changes">Allowed Changes successfully obtained!</string>
    <string name="success_change_allowed_changes">Changes to the ingredient saved successfully!</string>
    <string name="edited_meal">Meal successfully edited</string>
    <string name="error_edit_meal">Erro! Não foi possível editar a refeição</string>
    <string name="meal_status">Meal status changed successfully</string>
    <string name="error_meal_status">Error! Unable to change steering status</string>
    <string name="success_meal_status_changed">Meal status changed successfully</string>
    <string name="error_meal_status_changed">Error! Unable to change steering status</string>
    <string name="wish_remove_trade_ask">Do you really want to remove this trade?</string>
    <string name="wish_remove_allowed_change_ask">Do you really want to remove this meal change?</string>
    <string name="delayed">Delayed</string>
    <string name="Done">Ready</string>
    <string name="in_preperation">In Preperation</string>
    <string name="not_started">Not Started</string>
    <string name="ready">Ready</string>
    <string name="direct_change_remove">Direct trade successfully removed!</string>
    <string name="error_direct_change_remove">Error! Unable to remove the direct trade.</string>
    <string name="error_general_change_remove">Error! Unable to remove the general trade.</string>
    <string name="general_change_remove">General trade successfully removed</string>
    <string name="add_meal_cart">Meal added to cart</string>
    <string name="no_available_trades">No Availabe Trades</string>
    <string name="cannot_takeaway">Cannot TakeAway</string>
    <string name="dosage">Dosage</string>
    <string name="view_trades">See Trades</string>
    <string name="meal_name">Meal Name</string>
    <string name="allowed_changes">Allowed Changes:</string>
    <string name="preparation_time">Preparation Time</string>
    <string name="confirm_allowed_changes">Confirm ingredient changes?</string>
    <string name="cancel_operation">Cancel operation?</string>
    <string name="confirm_operation">Confirm the operation?</string>
    <string name="image_upload_error">Error Uploading Image</string>
    <string name="didnt_change">There are no changes</string>
    <string name="cannot_made">This meal cannot be made</string>
    <string name="canbemade">Can Be Made</string>
    <string name="change_image">Click to Change Image</string>
    <string name="cannot_be_made">Cannot Be Made</string>
    <string name="no_notifications">No Notifications Available</string>
    <string name="decision">Decision:</string>
    <string name="accept">Accept</string>
    <string name="wish_remove_meal_cart">Wish remove meal from cart?</string>
    <string name="wish_remove_favorite_meal">Wish remove favorite meal?</string>
</resources>