<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id='@+id/detailed_my_order_name'
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="@string/name"
        android:textSize="50sp"
        android:textColor="@color/black"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id='@+id/detailed_my_order_quantity'
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="@string/quantity"
        android:textSize="50sp"
        android:textColor="@color/black"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/detailed_my_order_name" />

    <TextView
        android:id='@+id/detailed_my_order_price'
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="@string/price"
        android:textSize="50sp"
        android:textColor="@color/black"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/detailed_my_order_quantity"/>

    <TextView
        android:id='@+id/detailed_my_order_state'
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="@string/state"
        android:textSize="50sp"
        android:textColor="@color/black"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/detailed_my_order_price"/>

</androidx.constraintlayout.widget.ConstraintLayout>