<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id='@+id/detailed_id'
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="@string/id"
        android:textSize="36sp"
        android:textColor="@color/black"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id='@+id/detailed_name'
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="@string/name"
        android:textSize="36sp"
        android:textColor="@color/black"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/detailed_id" />

    <TextView
        android:id='@+id/detailed_state'
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="@string/state"
        android:textSize="36sp"
        android:textColor="@color/black"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/detailed_name"/>

</androidx.constraintlayout.widget.ConstraintLayout>