<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/add_ingredient_bottom_sheet"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="bottom"
    android:background="@drawable/create_ingredient"


    xmlns:app="http://schemas.android.com/apk/res-auto" >

    <TextView
        android:paddingTop="10dp"
        android:id="@+id/add_ingredient_text_ingredient"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/change_ingredient"
        android:textAlignment="center"
        android:textSize="25sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/add_ingredient_arrow"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_marginStart="15dp"
        android:background="@drawable/arrow_back"
        android:backgroundTint="@color/black"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <TextView
        android:paddingTop="10dp"
        android:id="@+id/add_ingredient_text_warning"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/warning"
        android:textAlignment="center"
        android:textSize="15sp"
        android:textStyle="bold"
        android:textColor="@color/redButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/add_ingredient_text_ingredient"/>

    <TextView
        app:layout_constraintTop_toBottomOf="@+id/add_ingredient_text_warning"
        android:id="@+id/add_ingredient_name_ingredient"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ingredient_name"
        android:textAlignment="textStart"
        android:textSize="20sp"
        android:layout_marginLeft="20dp"
        android:textColor="@color/black"
        android:layout_marginTop="10dp" />

    <EditText
        android:id="@+id/add_ingredient_name_edittext"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/edit_text_style"
        android:textColor="@color/black"
        android:drawablePadding="10dp"
        android:paddingLeft="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/add_ingredient_name_ingredient"/>

    <TextView
        app:layout_constraintTop_toBottomOf="@+id/add_ingredient_name_edittext"
        android:id="@+id/add_ingredient_dosage_textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ingredient_dosage"
        android:textAlignment="textStart"
        android:textSize="20sp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp"
        android:textColor="@color/black" />

    <EditText
        app:layout_constraintTop_toBottomOf="@+id/add_ingredient_dosage_textview"
        android:id="@+id/add_ingredient_dosage_edittext"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/edit_text_style"
        android:textColor="@color/black"
        android:drawablePadding="10dp"
        android:paddingLeft="20dp" />

    <TextView
        app:layout_constraintTop_toBottomOf="@+id/add_ingredient_dosage_edittext"
        android:id="@+id/add_ingredient_increment_limit_textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/increment_limit"
        android:textAlignment="textStart"
        android:textSize="20sp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp"
        android:textColor="@color/black"
        />

    <EditText
        android:inputType="number"
        app:layout_constraintTop_toBottomOf="@+id/add_ingredient_increment_limit_textview"
        android:id="@+id/add_ingredient_increment_limit_edittext"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/edit_text_style"
        android:digits="0123456789"
        android:textColor="@color/black"
        android:drawablePadding="10dp"
        android:paddingLeft="20dp" />

    <TextView
        app:layout_constraintTop_toBottomOf="@+id/add_ingredient_increment_limit_edittext"
        android:id="@+id/add_ingredient_decrement_limit_textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/decrement_limit"
        android:textAlignment="textStart"
        android:textSize="20sp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp"
        android:textColor="@color/black" />

    <EditText
        android:inputType="number"
        app:layout_constraintTop_toBottomOf="@+id/add_ingredient_decrement_limit_textview"
        android:id="@+id/add_ingredient_decrement_limit_edittext"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/edit_text_style"
        android:digits="0123456789"
        android:textColor="@color/black"
        android:drawablePadding="10dp"
        android:paddingLeft="20dp" />

    <TextView
        app:layout_constraintTop_toBottomOf="@+id/add_ingredient_decrement_limit_edittext"
        android:id="@+id/add_ingredient_default_textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/default_value"
        android:textAlignment="textStart"
        android:textSize="20sp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp"
        android:textColor="@color/black" />

    <EditText
        android:inputType="number"
        app:layout_constraintTop_toBottomOf="@+id/add_ingredient_default_textview"
        android:id="@+id/add_ingredient_default_edittext"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/edit_text_style"
        android:digits="0123456789"
        android:textColor="@color/black"
        android:drawablePadding="10dp"
        android:paddingLeft="20dp" />

    <CheckBox
        android:id="@+id/add_ingredient_checkbox_can_increment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/add_ingredient_default_edittext"
        app:layout_constraintLeft_toLeftOf="@+id/add_ingredient_decrement_limit_textview"
        android:text="@string/can_increment"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:textColor="@color/black"
        />

    <CheckBox
        android:id="@+id/add_ingredient_checkbox_can_decrement"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/add_ingredient_default_edittext"
        app:layout_constraintLeft_toRightOf="@+id/add_ingredient_checkbox_can_increment"
        android:text="@string/can_decrement"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:textColor="@color/black"
        />

    <CheckBox
        android:id="@+id/add_ingredient_checkbox_can_isremoveonly"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/add_ingredient_checkbox_can_decrement"
        app:layout_constraintLeft_toLeftOf="@+id/add_ingredient_decrement_limit_textview"
        android:text="@string/is_remove_only"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginLeft="10dp"
        android:textColor="@color/black"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/add_ingredient_cancel"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:padding="10dp"
        android:hint="@string/cancel"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="80dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/button_grey"
        android:textAlignment="center"
        android:layout_marginLeft="70dp"
        />
    <Button
        android:id="@+id/add_ingredient_save"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:padding="10dp"
        android:textColorHint="@color/white"
        android:hint="@string/save"
        android:layout_marginRight="70dp"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="80dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/rounded_button_style"
        android:textAlignment="center"
        />

</androidx.constraintlayout.widget.ConstraintLayout>