<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="120dp"
    android:layout_marginTop="20dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:elevation="10dp"
    android:background="@drawable/my_order_card">

    <ImageView
        android:id='@+id/my_orders_card_image'
        android:layout_width="120dp"
        android:layout_height="match_parent"
        android:layout_marginBottom="5dp"
        android:layout_marginRight="100dp"
        android:background="@drawable/square_card_green_image"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/my_orders_card_identifier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:textStyle="bold"
        android:text="@string/id"
        android:textColor="@color/white"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        app:layout_constraintStart_toStartOf="@id/my_orders_card_image"
        app:layout_constraintTop_toTopOf="@id/my_orders_card_image"
        app:layout_constraintEnd_toEndOf="@id/my_orders_card_image"
        app:layout_constraintBottom_toBottomOf="@id/my_orders_card_image"/>

    <TextView
        android:id="@+id/my_orders_card_quantity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="12sp"
        android:textStyle="bold"
        android:text="@string/quantity"
        android:textColor="@color/black"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="30dp"
        app:layout_constraintLeft_toRightOf="@id/my_orders_card_image"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/my_orders_card_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="12sp"
        android:textStyle="bold"
        android:text="@string/price"
        android:textColor="@color/background_color"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="12dp"
        app:layout_constraintLeft_toRightOf="@id/my_orders_card_image"
        app:layout_constraintTop_toBottomOf="@id/my_orders_card_quantity"/>

    <TextView
        android:id="@+id/my_orders_card_state"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:textStyle="bold"
        android:text="@string/state"
        android:gravity="center"
        android:textColor="@color/background_color"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="35dp"
        app:layout_constraintLeft_toRightOf="@id/my_orders_card_quantity"
        app:layout_constraintTop_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/my_orders_card_button_trade"
        android:layout_width="80dp"
        android:layout_height="35dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/rounded_button_style"
        android:hint="@string/trade"
        android:textSize="13sp"
        android:textAlignment="center"
        android:textColorHint="@color/white"
        android:onClick="doTrade"
        app:layout_constraintLeft_toRightOf="@id/my_orders_card_quantity"
        app:layout_constraintTop_toBottomOf="@id/my_orders_card_state"
        app:layout_constraintEnd_toEndOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>