<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_main"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/main_title_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="25sp"
        android:layout_marginTop="10dp"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/main_search_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:height="30dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:hint="@string/main_search_meals"
        android:background="@drawable/edit_text_style"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/main_title_tv"
        />

    <TextView
        android:id="@+id/main_trades_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_trades"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/main_search_et"
        app:layout_constraintLeft_toLeftOf="parent"
        />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/main_available_trades_rv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginTop="5dp"
        app:layout_constraintTop_toBottomOf="@id/main_trades_tv"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <TextView
        android:id="@+id/main_bar_meals_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_bar_meals"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/main_available_trades_rv"
        app:layout_constraintLeft_toLeftOf="parent"
        />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/main_bar_meals_rv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginTop="5dp"
        app:layout_constraintTop_toBottomOf="@id/main_bar_meals_tv"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <TextView
        android:id="@+id/main_orders_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_orders"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/main_bar_meals_rv"
        app:layout_constraintLeft_toLeftOf="parent"
        />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/main_orders_rv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginTop="5dp"
        app:layout_constraintTop_toBottomOf="@id/main_orders_tv"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>